fix: align card vertically on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,6 +52,12 @@ body {
   background-color: var(--bg-primary);
   overflow-x: hidden;
   color: var(--text-secondary);
+  
+  @media only screen and (max-width: 800px) {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+  }
 }
 
 div.center {
@@ -60,6 +66,14 @@ div.center {
   display: flex;
   justify-content: center;
   align-items: center;
+  
+  @media only screen and (max-width: 800px) {
+    padding: var(--space-md);
+    padding-top: calc(48px + var(--space-md));
+    box-sizing: border-box;
+    height: 100vh;
+    margin-top: 0;
+  }
 }
 
 div.background {
@@ -81,9 +95,13 @@ div.container {
   border-radius: var(--radius);
   padding: var(--space-lg);
   z-index: 1;
+  max-width: 90%;
 
   @media only screen and (max-width: 800px) {
-    width: 80%;
+    width: 100%;
+    max-width: 100%;
+    margin: 0;
+    box-sizing: border-box;
   }
 }
 
@@ -213,10 +231,10 @@ div.navbar {
   background-color: var(--bg-primary);
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.4);
   border-bottom: 1px solid var(--border);
-  position: absolute;
+  position: fixed;
   height: 48px;
   width: 100%;
-  z-index: 1;
+  z-index: 1000;
   left: 0;
   top: 0;
 
@@ -277,8 +295,9 @@ div.navbar {
 
 div.content {
   justify-content: center;
-  margin-top: 96px;
+  margin-top: 64px;
   display: grid;
+  padding-top: var(--space-lg);
 
   & > section {
     width: 48rem;
@@ -392,13 +411,16 @@ div.content {
   }
 
   @media only screen and (max-width: 800px) {
-    margin-left: var(--space-lg);
-    margin-right: var(--space-lg);
+    margin-left: var(--space-md);
+    margin-right: var(--space-md);
+    margin-top: 48px;
+    padding-top: var(--space-md);
     display: block;
+    max-width: calc(100vw - 2 * var(--space-md));
 
     & > section {
-      max-width: 48rem;
-      width: auto;
+      max-width: 100%;
+      width: 100%;
     }
 
     & > div.metadata {
